--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">PopularMoviesV1</string>
+
     <string name="main_error">Error while loading the movie list! Please refresh.</string>
-    <string name="cover_image_content_description">This is the cover image of the movie.</string>
+    <string name="main_menu_change_sorting_popular">Sort by popularity</string>
+    <string name="main_menu_change_sorting_rated">Sort by rating</string>
+
+    <string name="detail_image_description">This is the cover image of the movie.</string>
 </resources>
